--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="row">
             <div class="about-col-1">
                 <img src="images/photo2.png.jpg">
-                <a href="images/Photo Resume.pdf" download class="resume"><i class='bx bxs-download' style='color:#35dcd3'  ></i>Download Resume</a>
+                <a href="images/My_finale_resume.pdf" download class="resume"><i class='bx bxs-download' style='color:#35dcd3'  ></i>Download Resume</a>
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About me</h1>
