--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="row">
             <div class="about-col-1">
                 <img src="images/photo2.png.jpg">
-                <a href="images/PatakokilaPraveenKumar_Resume.pdf"  target="_blank" class="resume"><i class='bx bxs-show'></i>    View Resume</a>
+                <a href="images/My_Resume.pdf"  target="_blank" class="resume"><i class='bx bxs-show'></i>    View Resume</a>
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About me</h1>
