--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 <div id="header">
     <div class="container">
         <nav>
-            <img src="images/Pravee.png" class="logo">
+            
             <ul id="sidemenu">
                 <li><a href="#header" style="--i:1" class="active"><b>Home</b></a></li>
                 <li><a href="#about" style="--i:2"><b>About</b></a></li>
                 <li><a href="#skills" style="--i:3"><b>Skills</b></a></li>
                 <li><a href="#project" style="--i:4"><b>Projects</b></a></li>
                 <li><a href="#contact" style="--i:5"><b>Contact</b></a></li>
-                <i class='bx bx-x-circle' style="color: rgb(173, 37, 64);" onclick="closemenu()"></i>
+                <i class='bx bx-x-circle' style="color: rgb(252, 252, 252);" onclick="closemenu()"></i>
             </ul>
             <i class='bx bx-menu' style='color:#36c8d3' onclick="openmenu()" ></i>
         </nav>
         <div class="header-text">
-        <P>Portofolio.</P>
+        <p><i><span class="para1" style="color: #1babbe;"></span></i></p>
         <h1>Hello, Myself <br><span>Patakokila Praveen<br> Kumar</h1></span>
         <h2>from Andhra Pradesh<br> And I'm a <span class="text"></span></h2>
             <a href="#about" class="btn-box">More About Me</a>
