--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
                 <h1 class="sub-title1">Contact Me</h1>
                 
                 <p>
-                    <a href="mailto:mrpraveenkumar@gmail.com" style="color:#ffffff; text-decoration:none;" onclick="return confirm('Do you want to send an email to mrpraveenkumar@gmail.com?');"  title="Send Mail">
-                      <i class='bx bxl-gmail' style='color:#2bd8e8'></i> mrpraveenkumar@gmail.com
+                    <a href="mailto:mrpraveenkumar9490@gmail.com" style="color:#ffffff; text-decoration:none;" onclick="return confirm('Do you want to send an email to mrpraveenkumar@gmail.com?');"  title="Send Mail">
+                      <i class='bx bxl-gmail' style='color:#2bd8e8'></i> mrpraveenkumar9490@gmail.com
                     </a>
                   </p>
                   <p>
