--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="row">
             <div class="about-col-1">
                 <img src="images/Formal_photo.png" id="profile-img">
-                <a href="https://drive.google.com/file/d/1pHKJLDu3hxy7UXR_QR3_-FDJ2vKGxUtD/view?usp=drive_link"  target="_blank" class="resume"><i class='bx bxs-show'></i>    View Resume</a>
+                <a href="https://drive.google.com/file/d/1Fygr9PYzxXNM5csC5OgD4z-cyI6Jgiw3/view?usp=sharing"  target="_blank" class="resume"><i class='bx bxs-show'></i>    View Resume</a>
                 <a href="mailto:mrpraveenkumar9490@gmail.com" class="connect" title="Connect"><i class='bx bxs-message-rounded-dots'></i></i>  Connect</a>
                 
             </div>
@@ -80,7 +80,8 @@
                 </div>
                 <div class="tab-contents" id="achievement">
                     <ul>
-                        <li><span><b>• Research Paper Publication</b></span><br>• Hinweis Conference <a href="https://drive.google.com/file/d/1-GesVnNUTWc3AgAs-_0CTdVxWyKaw0L9/view?usp=sharing" target="_blank" style="color: #47c2ff;"> (Certificate)</a><br>• Published a <a href="https://drive.google.com/file/d/1e9JqRiKmhb0-_T--OYf1wuZzTnrKRJNU/view?usp=sharing" target="_blank" style="color: #f7f7f7;">research paper</a> on Natural Language Processing titled "Integrating Probabilities Models and Neural Networks for Enhanced Part-of-Speech Tagging and Spellchecking" at the Hinweis International Conference on RTET 2024, indexed by Scopus and Crossref.</li>
+                        <li><span><b>• Research Paper Publication</b></span><br>• Hinweis Conference <a href="https://drive.google.com/file/d/1-GesVnNUTWc3AgAs-_0CTdVxWyKaw0L9/view?usp=sharing" target="_blank" style="color: #47c2ff;"> (Certificate)</a><br>• Published a <a href="https://drive.google.com/file/d/1KIFpzW9djmeeKpqyRo9RCcJehvucKZng/view?usp=sharing" target="_blank" style="color: #f7f7f7;">research paper</a> on Natural Language Processing titled "Integrating Probabilities Models and Neural Networks for Enhanced Part-of-Speech Tagging and Spellchecking" as a main author in Grenze International Journal of Engineering and Technology <a href="https://drive.google.com/file/d/1e9JqRiKmhb0-_T--OYf1wuZzTnrKRJNU/view?usp=sharing" target="_blank" style="color: #f7f7f7;">(GIJET)</a>.</li>
+                        <br>• <a href="https://drive.google.com/file/d/14cMAfvLSIAf1GHmW5XAH6MpeB_Bu53B4/view?usp=sharing" target="_blank" style="color: #f7f7f7;">Research paper</a> on “ Image Classification using Convolutional Neural Networks (CNN) : A Deep Learning Approach for Multi-Class Classification ” accepted and published in the Hinweis International Conference on Image Processing, Conference Proceedings, indexed by Scopus and Crossref. </li>
                     </ul>
                 </div>
             </div>
