--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     </a>
                   </p>
                 <div class="social-icons">
-                    <a href="https://www.linkedin.com/in/praveen-kumar-16a521250/" class="linkedin" style="--i:1" ><i class='bx bxl-linkedin-square' title="LinkeIn"></i></a>
+                    <a href="https://www.linkedin.com/in/praveenkumar949/" class="linkedin" style="--i:1" ><i class='bx bxl-linkedin-square' title="LinkeIn"></i></a>
                     <a href="https://github.com/praveenkumar949" class="github" style="--i:2"><i class='bx bxl-github' title="GitHub"></i></a>
                     <a href="https://leetcode.com/u/mrpraveenkumar9490/" class="leetcode" style="--i:3"><i class='bx bx-code-alt' title="LeetCode"></i></a>
                     <a href="https://www.instagram.com/mr__.pandu__/" class="instagram" style="--i:4"><i class='bx bxl-instagram' title="Instagram"></i></a>
