--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         
         <div class="header-text">
         <p><i><span class="para1" style="color: #1babbe;"></span></i></p>
-        <h1>Hello, Myself <br><span>Patakokila Praveen<br> Kumar</h1></span>
+        <h1>Hello, I am <br><span>Patakokila Praveen<br> Kumar</h1></span>
         <h2>from Andhra Pradesh<br> And I'm a <span class="text"></span></h2>
             <a href="#about" class="btn-box">More About Me</a>
         </div>
@@ -44,7 +44,7 @@
         <div class="row">
             <div class="about-col-1">
                 <img src="images/Formal_photo.png" id="profile-img">
-                <a href="https://drive.google.com/file/d/16gl5XrSPz1xHNsRmuM-mdSNe6I3WqHql/view?usp=sharing"  target="_blank" class="resume"><i class='bx bxs-show'></i>    View Resume</a>
+                <a href="https://drive.google.com/file/d/1NudTQZzCBHLkG9a3meOy8J5ZhR5GJMRQ/view?usp=sharing"  target="_blank" class="resume"><i class='bx bxs-show'></i>    View Resume</a>
                 <a href="mailto:mrpraveenkumar9490@gmail.com" class="connect" title="Connect"><i class='bx bxs-message-rounded-dots'></i></i>  Connect</a>
                 
             </div>
@@ -73,15 +73,15 @@
                         <li><span><b>• Hindi</b></span><br>Professional working proficiency</li>
                     </ul>
                 </div>
-                <div class="tab-contents" id="internship">
+                <div class="tab-contents" id="internship" style="line-height: 1.5;">
                     <ul>
                         <li><span><b>• Machine Learning Intern</b></span><br>Academor - (Remote)<br>September 2024 - October 2024<br><a href="https://drive.google.com/file/d/18JyY-4bQxvSPdO43FBjBWrC-EgJEp4nM/view?usp=sharing" target="_blank" style="color: #47c2ff;">Internship Certificate</a><br><a href="https://drive.google.com/file/d/1Nk5oKH5nEY3GbD-VFY8ZAUEPhoDQ-5XS/view?usp=sharing" target="_blank" style="color: #47c2ff;"> Letter of Recommendation(LOR)</a><br><b><a style="color: #47c2ff;">• Acquired skills:</a></b> Python Programming, Python Libraries, Machine Learning, Object-Oriented Programming (OOPS)</li>
                     </ul>
                 </div>
-                <div class="tab-contents" id="achievement">
+                <div class="tab-contents" id="achievement" style="line-height: 1.3;">
                     <ul>
                         <li><span><b>• Research Paper Publication</b></span><br>• Hinweis Conference <a href="https://drive.google.com/file/d/1-GesVnNUTWc3AgAs-_0CTdVxWyKaw0L9/view?usp=sharing" target="_blank" style="color: #47c2ff;"> (Certificate)</a><br>• Published a <a href="https://drive.google.com/file/d/1KIFpzW9djmeeKpqyRo9RCcJehvucKZng/view?usp=sharing" target="_blank" style="color: #f7f7f7;">research paper</a> on Natural Language Processing titled "Integrating Probabilities Models and Neural Networks for Enhanced Part-of-Speech Tagging and Spellchecking" as a main author in Grenze International Journal of Engineering and Technology <a href="https://thegrenze.com/index.php?display=page&view=journalabstract&absid=3983&id=8" target="_blank" style="color: #f7f7f7;">(GIJET)</a>.
-                        <br>• <a href="https://drive.google.com/file/d/14cMAfvLSIAf1GHmW5XAH6MpeB_Bu53B4/view?usp=sharing" target="_blank" style="color: #f7f7f7;">Research paper</a> on “ Image Classification using Convolutional Neural Networks (CNN) : A Deep Learning Approach for Multi-Class Classification ” accepted and published in the Hinweis International Conference on Image Processing, Conference Proceedings, indexed by Scopus and Crossref. </li>
+                        <br>• <a href="https://drive.google.com/file/d/14cMAfvLSIAf1GHmW5XAH6MpeB_Bu53B4/view?usp=sharing" target="_blank" style="color: #f7f7f7;">Research paper</a> on “ Image Classification using Convolutional Neural Networks (CNN) : A Deep Learning Approach for Multi-Class Classification ” accepted and published in the Hinweis International Conference on Image Processing, Conference Proceedings, indexed by Scopus and Crossref.<a href="https://drive.google.com/file/d/1Vbxx59QmykEaOlAaskCoDQk5l_08oTwO/view?usp=sharing" target="_blank" style="color: #f7f7f7;"> (Certificate)</a> </li>
                     </ul>
                 </div>
             </div>
