--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <i class="fas fa-eye"></i> View Resume
                     </a>
                     <a href="https://drive.google.com/file/d/1DPDGKrSZaFuMo1H5_zVpzg-z_n_hyTI1/view?usp=sharing"
-                        target="_blank" class="btn btn-secondary" style="margin-top: 20px;">
+                        target="_blank" class="btn btn-secondary cover-letter-btn" style="margin-top: 20px;">
                         <i class="fas fa-file-alt"></i> Cover letter
                     </a>
 
@@ -336,7 +336,7 @@
                             alt="Project 1">
                         <div class="portfolio-overlay">
                             <h3>Heart Disease Prediction Using machine learning models</h3>
-                            <p>A machine learning project predicting heart disease presence using health metrics</p>
+                            <p class="mat">A machine learning project predicting heart disease presence using health metrics</p>
                             <a href="https://github.com/praveenkumar949/heart_disease_prediction_ml" class="view-project">View Project</a>
                         </div>
                     </div>
@@ -344,11 +344,11 @@
                 <!-- Project 2 -->
                 <div class="portfolio-item" data-category="design">
                     <div class="portfolio-img">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlOqAQuNVYcUoESxwTbI_ViF9kdwMP59zCNg&s"
+                        <img src="https://www.simplilearn.com/ice9/free_resources_article_thumb/Deep-Learning-vs-Machine-Learning.jpg"
                             alt="Project 2">
                         <div class="portfolio-overlay">
                             <h3>Image Classification using Convolutional Neural Networks (CNN)</h3>
-                            <p>A deep learning project achieving ~89% test accuracy in classifying images into eight
+                            <p class="mat">A deep learning project achieving ~89% test accuracy in classifying images into eight
                                 categories using a CNN with data augmentation and detailed performance analysis.</p>
                             <a href="#" class="view-project">View Project</a>
                         </div>
@@ -361,7 +361,7 @@
                             alt="Project 3">
                         <div class="portfolio-overlay">
                             <h3>Enhanced Part-of-Speech Tagging and Spellchecking with Hybrid Model</h3>
-                            <p>A deep learning project integrating probabilistic models and BiLSTM to improve Telugu POS
+                            <p class="mat">A deep learning project integrating probabilistic models and BiLSTM to improve Telugu POS
                                 tagging and spellchecking for low-resource NLP.</p>
                             <a href="#" class="view-project">View Project</a>
                         </div>
@@ -374,7 +374,7 @@
                             alt="Project 4">
                         <div class="portfolio-overlay">
                             <h3>Yoga Pose Prediction</h3>
-                            <p>A project using machine learning models to classify yoga poses from images, with CNN
+                            <p class="mat">A project using machine learning models to classify yoga poses from images, with CNN
                                 proving most effective.</p>
                             <a href="#" class="view-project">View Project</a>
                         </div>
@@ -387,7 +387,7 @@
                             alt="Project 5">
                         <div class="portfolio-overlay">
                             <h3>Recognizing and Digitizing Handwritten Text in Historical Documents</h3>
-                            <p>A project applying CRNN and TrOCR to recognize and digitize handwritten text from
+                            <p class="mat">A project applying CRNN and TrOCR to recognize and digitize handwritten text from
                                 historical documents for improved text retrieval and preservation.</p>
                             <a href="#" class="view-project">View Project</a>
                         </div>
@@ -399,7 +399,7 @@
                         <img src="https://www.medius.co.jp/assets/2024/08/shutterstock_2425703833.jpg" alt="Project 6">
                         <div class="portfolio-overlay">
                             <h3>Disease predeiction web app</h3>
-                            <p>A web app that predicts diseases based on user symptoms using machine learning for early
+                            <p class="mat">A web app that predicts diseases based on user symptoms using machine learning for early
                                 diagnosis and healthcare insights.</p>
                             <a href="#" class="view-project">View Project</a>
                         </div>
@@ -540,7 +540,7 @@
                 <!-- Project 1 -->
                  <div class="portfolio-item" data-type="certificate">
                     <div class="portfolio-img">
-                        <img src="/My_portfolio/images/Screenshot 2025-07-01 134245.png" alt="Project 1">
+                        <img src="images/Screenshot 2025-07-01 134245.png" alt="Project 1">
                         <div class="portfolio-overlay">
                             <h3>Cloud Computing</h3>
                             <p>NPTEL (October 2024)</p>
@@ -551,7 +551,7 @@
                 <!-- Project 2 -->
                 <div class="portfolio-item" data-type="certificate">
                     <div class="portfolio-img">
-                        <img src="/My_portfolio/images/Screenshot 2025-07-01 134330.png" alt="Project 2">
+                        <img src="images/Screenshot 2025-07-01 134330.png" alt="Project 2">
                         <div class="portfolio-overlay">
                             <h3>Complete Interview Preparation - Self-Paced (C++)</h3>
                             <p>GeeksforGeeks (July 2024)</p>
@@ -562,7 +562,7 @@
                 <!-- Project 3 -->
                 <div class="portfolio-item" data-type="certificate" >
                     <div class="portfolio-img">
-                        <img src="/My_portfolio/images/Screenshot 2025-07-01 134605.png" alt="Project 3">
+                        <img src="images/Screenshot 2025-07-01 134605.png" alt="Project 3">
                         <div class="portfolio-overlay">
                             <h3>Dynamic Programming, Greedy Algorithms</h3>
                             <p>Coursera (May 2024)</p>
@@ -573,7 +573,7 @@
                 <!-- Project 4 -->
                 <div class="portfolio-item" data-type="certificate" >
                     <div class="portfolio-img">
-                        <img src="/My_portfolio/images/Screenshot 2025-07-01 134631.png" alt="Project 4">
+                        <img src="images/Screenshot 2025-07-01 134631.png" alt="Project 4">
                         <div class="portfolio-overlay">
                             <h3>Generative AI with Large Language Models</h3>
                             <p>Coursera (March 2024)</p>
@@ -584,7 +584,7 @@
                 <!-- Hidden Projects -->
                 <div class="portfolio-item hidden" data-type="certificate" >
                     <div class="portfolio-img">
-                        <img src="/My_portfolio/images/Screenshot 2025-07-01 134652.png" alt="Project 5">
+                        <img src="images/Screenshot 2025-07-01 134652.png" alt="Project 5">
                         <div class="portfolio-overlay">
                             <h3>Programming in C++: A Hands-on Introduction</h3>
                             <p>Coursera (February 2024)</p>
@@ -594,7 +594,7 @@
                 </div>
                 <div class="portfolio-item hidden" data-type="certificate" >
                     <div class="portfolio-img">
-                        <img src="/My_portfolio/images/Screenshot 2025-07-01 134713.png" alt="Project 6">
+                        <img src="images/Screenshot 2025-07-01 134713.png" alt="Project 6">
                         <div class="portfolio-overlay">
                             <h3>Become a Data Scientist</h3>
                             <p>LinkedIn (February 2023)</p>
