--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="https://img.freepik.com/free-vector/blue-circle-with-white-user_78370-4707.jpg?semt=ais_hybrid&w=740" alt="Professional Headshot">
+                <img src="images/img1.jpg" alt="Professional Headshot">
             </div>
             
         </div>
@@ -113,7 +113,7 @@
 
                 </div>
                 <div class="about-image">
-                    <img src="https://img.freepik.com/free-vector/blue-circle-with-white-user_78370-4707.jpg?semt=ais_hybrid&w=740" alt="About Me Image">
+                    <img src="/My_portfolio/images/formal photo.jpg" alt="About Me Image">
                 </div>
 
             </div>
