--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
                 </div>
                 <div class="about-image">
-                    <img src="/My_portfolio/images/formal photo.jpg" alt="About Me Image">
+                    <img src="images/formal photo.jpg" alt="About Me Image">
                 </div>
 
             </div>
