--- a/index.html
+++ b/index.html
@@ -858,7 +858,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; <span id="year"></span> Your Name. All Rights Reserved.</p>
+            <p>&copy; <span id="year"></span> Patakokila Praveen Kumar. All Rights Reserved.</p>
         </div>
     </footer>
 
