--- a/index.html
+++ b/index.html
@@ -854,6 +854,15 @@
             </div>
         </div>
     </section>
+    <div id="toastContainer" style="
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+"></div>
 
     <!-- Footer -->
     <footer class="footer">
