--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="images/img1.jpg" alt="Professional Headshot">
+                <img src="images/formal full.png" alt="Professional Headshot">
             </div>
             
         </div>
@@ -885,3 +885,4 @@
 </body>
 
 </html>
+
