--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
                 </div>
                 <div class="about-image">
-                    <img src="images/Image.png" alt="About Me Image">
+                    <img src="images/Image1.png" alt="About Me Image">
                 </div>
 
             </div>
@@ -885,5 +885,6 @@
 </body>
 
 </html>
+
 
 
